# cmake_demo_using_dll

./: CMakeLists.txt  calculator_qml.cpp  calculator_qml.h  main.cpp  main.qml  readme.md
cmake/: Findmy_lib.cmake  my_lib-config-debug.cmake
